# haskell-programs

./: .gitignore  Codewars.hs  Hello.hs  IOFile.hs  MyLib.hs  README.org  Radar.hs  RandomRadar.hs  ReadText.hs  Second.hs  Test.hs  Vocab.hs  helloWorld.hs  mainProgram.hs  meantdelete.py  testing.hs
ChapterThree/ChapterThreeOne/: ModulePlay.hs
ChapterThree/ChapterThreeOne/containers-mini/: CHANGELOG.md  containers-mini.cabal
ChapterThree/ChapterThreeOne/containers-mini/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
ChapterTwo/ChapterTwoOne/: CustomFixedPrecision.hs  FixedPrecision.hs  Main.hs  StringMani.hs  TypeClassHierarchy.hs
ChapterTwo/ChapterTwoThree/: Context.hs  ShowRead.hs  person-derived.hs
HaskellChallenges/: BreakCamelCase.hs  Codewars.hs
fp-haskell/: BasicFunc.hs  FPMain.hs  ListComp.hs  QuickSort.hs  TypesClasses.hs
haskell-json/: Main.hs
plutus-scripts/: Hello_World.hs
