cabal-version:      2.4
name:               containers-mini
version:            0.1.0.0
author:             Yash Sonune
maintainer:         yash.sonune08@gmail.com
build-type:         Simple


library
  exposed-modules:      Data.Stack, Data.Deque, Data.Queue
  other-extensions:     NoImplicitPrelude
  build-depends:        base >=4.12.0.0
                      , containers
  default-language      Haskell2010










-- executable containers-mini
--     main-is:          Main.hs

    -- Modules included in this executable, other than Main.
      -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- build-depends:    base ^>=4.12.0.0
    -- hs-source-dirs:   app
    -- default-language: Haskell2010
